changes in index.html

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
             </div>
         </div>
         <div class="task-card">
-            <h3 class="task-title">Calisthenics</h3>
-            <p class="task-desc">Work on pushups & pullups</p>
-            <p class="task-deadline">16-06-2025 18:30</p>
+            <h3 class="task-title"> cook a meal</h3>
+            <p class="task-desc"> make a dish for the family</p>
+            <p class="task-deadline">16-06-2025  20:30</p>
             <div class="task-buttons">
                 <div class="edit-button">Edit</div>
                 <div class="delete-button">Delete</div>
             </div>
         </div>
         <div class="task-card">
-            <h3 class="task-title">Calisthenics</h3>
-            <p class="task-desc">Work on pushups & pullups</p>
-            <p class="task-deadline">16-06-2025 18:30</p>
+            <h3 class="task-title"> sleep</h3>
+            <p class="task-desc">journal for 5 mins before sleep</p>
+            <p class="task-deadline">16-06-2025  22:30</p>
             <div class="task-buttons">
                 <div class="edit-button">Edit</div>
                 <div class="delete-button">Delete</div>
